<resources>
    <string name="app_name">Calculo Juros Pagamento</string>
    <string name="Calcular">Calcular</string>
    <string name="NovoMes">Novo Mês</string>
    <string name="Config">Config</string>
    <string name="Sair">Sair</string>
    <string name="TxDtPagamento">Pagamento</string>
    <string name="TxDtVencimento">Vencimento</string>
    <string name="TxVlrPagar">Valor a Pagar</string>
    <string name="presta_o">Prestação</string>
</resources>
